Implement armor trims
Armor trim recipe should dynamically pull any trim, vanilla or mod added
Trims end up being quite similar to our own material variants on armor, except mojangs datapack registries are an absolute pain to access anywhere.