@@ -1,25 +1,19 @@
 package slimeknights.tconstruct.tools.recipe;
 
-import com.google.gson.JsonObject;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.data.recipes.FinishedRecipe;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
 import net.minecraftforge.common.Tags.Items;
-import slimeknights.mantle.data.loadable.common.IngredientLoadable;
-import slimeknights.mantle.data.loadable.field.ContextKey;
-import slimeknights.mantle.data.loadable.record.RecordLoadable;
 import slimeknights.mantle.recipe.IMultiRecipe;
 import slimeknights.mantle.util.RegistryHelper;
+import slimeknights.tconstruct.common.TinkerTags;
 import slimeknights.tconstruct.library.json.IntRange;
 import slimeknights.tconstruct.library.modifiers.ModifierEntry;
 import slimeknights.tconstruct.library.modifiers.ModifierId;
@@ -41,22 +35,18 @@ import java.util.stream.Collectors;
 
 /** Recipe to dye travelers gear */
 public class ArmorDyeingRecipe implements ITinkerStationRecipe, IMultiRecipe<IDisplayModifierRecipe> {
-  public static final RecordLoadable<ArmorDyeingRecipe> LOADER = RecordLoadable.create(ContextKey.ID.requiredField(), IngredientLoadable.DISALLOW_EMPTY.requiredField("tools", r -> r.toolRequirement), ArmorDyeingRecipe::new);
-
   @Getter
   private final ResourceLocation id;
-  private final Ingredient toolRequirement;
 
-  public ArmorDyeingRecipe(ResourceLocation id, Ingredient toolRequirement) {
+  public ArmorDyeingRecipe(ResourceLocation id) {
     this.id = id;
-    this.toolRequirement = toolRequirement;
     ModifierRecipeLookup.addRecipeModifier(null, TinkerModifiers.dyed);
   }
 
   @Override
   public boolean matches(ITinkerStationContainer inv, Level world) {
     // ensure this modifier can be applied
-    if (!this.toolRequirement.test(inv.getTinkerableStack())) {
+    if (!inv.getTinkerableStack().is(TinkerTags.Items.DYEABLE)) {
       return false;
     }
     // slots must be only dyes, and have at least 1 dye
@@ -153,53 +143,18 @@ public class ArmorDyeingRecipe implements ITinkerStationRecipe, IMultiRecipe<IDi
   @Override
   public List<IDisplayModifierRecipe> getRecipes(RegistryAccess access) {
     if (displayRecipes == null) {
-      List<ItemStack> toolInputs = Arrays.stream(this.toolRequirement.getItems()).map(stack -> {
-        if (stack.getItem() instanceof IModifiableDisplay) {
-          return ((IModifiableDisplay)stack.getItem()).getRenderTool();
-        }
-        return stack;
-      }).toList();
-      ModifierEntry result = new ModifierEntry(TinkerModifiers.dyed.get(), 1);
-      displayRecipes = Arrays.stream(DyeColor.values()).map(dye -> new DisplayRecipe(result, toolInputs, dye)).collect(Collectors.toList());
+      List<ItemStack> toolInputs = RegistryHelper.getTagValueStream(BuiltInRegistries.ITEM, TinkerTags.Items.DYEABLE)
+                                                 .map(IModifiableDisplay::getDisplayStack).toList();
+      displayRecipes = Arrays.stream(DyeColor.values()).map(dye -> new DisplayRecipe(toolInputs, dye)).collect(Collectors.toList());
     }
     return displayRecipes;
-  }
-
-
-  /** Finished recipe */
-  @SuppressWarnings("ClassCanBeRecord")
-  @RequiredArgsConstructor
-  public static class Finished implements FinishedRecipe {
-    @Getter
-    private final ResourceLocation id;
-    private final Ingredient toolRequirement;
-
-    @Override
-    public void serializeRecipeData(JsonObject json) {
-      json.add("tools", toolRequirement.toJson());
-    }
-
-    @Override
-    public RecipeSerializer<?> getType() {
-      return TinkerModifiers.armorDyeingSerializer.get();
-    }
-
-    @Nullable
-    @Override
-    public JsonObject serializeAdvancement() {
-      return null;
-    }
-
-    @Nullable
-    @Override
-    public ResourceLocation getAdvancementId() {
-      return null;
-    }
   }
 
   private static class DisplayRecipe implements IDisplayModifierRecipe {
     /** Cache of tint colors to save calculating it twice */
     private static final int[] TINT_COLORS = new int[16];
+    private static final IntRange LEVELS = new IntRange(1, 1);
+    private final ModifierEntry RESULT = new ModifierEntry(TinkerModifiers.dyed, 1);
 
     /** Gets the tint color for the given dye */
     private static int getTintColor(DyeColor color) {
@@ -214,23 +169,25 @@ public class ArmorDyeingRecipe implements ITinkerStationRecipe, IMultiRecipe<IDi
 
     private final List<ItemStack> dyes;
     @Getter
-    private final ModifierEntry displayResult;
-    @Getter
     private final List<ItemStack> toolWithoutModifier;
     @Getter
     private final List<ItemStack> toolWithModifier;
     @Getter
     private final Component variant;
-    public DisplayRecipe(ModifierEntry result, List<ItemStack> tools, DyeColor color) {
-      this.displayResult = result;
+    public DisplayRecipe(List<ItemStack> tools, DyeColor color) {
       this.toolWithoutModifier = tools;
       this.dyes = RegistryHelper.getTagValueStream(BuiltInRegistries.ITEM, color.getTag()).map(ItemStack::new).toList();
       this.variant = Component.translatable("color.minecraft." + color.getSerializedName());
 
-      ResourceLocation id = result.getModifier().getId();
+      ResourceLocation id = RESULT.getId();
       int tintColor = getTintColor(color);
-      List<ModifierEntry> results = List.of(result);
+      List<ModifierEntry> results = List.of(RESULT);
       toolWithModifier = tools.stream().map(stack -> IDisplayModifierRecipe.withModifiers(stack, results, data -> data.putInt(id, tintColor))).toList();
+    }
+
+    @Override
+    public ModifierEntry getDisplayResult() {
+      return RESULT;
     }
 
     @Override
@@ -248,7 +205,7 @@ public class ArmorDyeingRecipe implements ITinkerStationRecipe, IMultiRecipe<IDi
 
     @Override
     public IntRange getLevel() {
-      return new IntRange(1, 1);
+      return LEVELS;
     }
   }
 }
